--- a/package.json
+++ b/package.json
@@ -9,32 +9,32 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "nativewind": "^4.0.1",
-    "@react-navigation/native": "^6.1.7",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-safe-area-context": "^4.8.2",
-    "react-native-screens": "~3.29.0",
-    "@react-navigation/drawer": "^6.6.6",
-    "@react-navigation/bottom-tabs": "^6.5.8",
     "@expo/vector-icons": "^14.0.0",
+    "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/drawer": "^6.6.6",
+    "@react-navigation/native": "^6.1.7",
+    "expo": "~50.0.5",
+    "expo-constants": "~15.4.5",
     "expo-linking": "~6.2.2",
     "expo-router": "^3.4.6",
-    "expo-constants": "~15.4.5",
+    "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
     "expo-web-browser": "~12.8.2",
-    "react-dom": "18.2.0",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-web": "~0.19.6",
     "firebase": "^10.5.2",
-    "react-native-url-polyfill": "^2.0.0",
-    "expo": "~50.0.5",
-    "expo-status-bar": "~1.11.1",
+    "nativewind": "^4.0.1",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-dom": "18.2.0",
+    "react-native": "0.73.4",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.14",
+    "@types/react": "^18.2.57",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
     "eslint": "^8.50.0",
